Fixed new note button align (closes b8557c2)

--- a/style/style.sass
+++ b/style/style.sass
@@ -36,7 +36,11 @@ section.is-fullheight
     border-right: 1px solid #dddddd
     background: #f6f6f6
 
-    header
+    .columns
+        padding: 1em
+        margin-bottom: 0 !important
+
+    .columns, header
         background: white
 
     .list
